deployment9.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springjwtdocker1
  labels:
    app: springjwtdocker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springjwtdocker1
  template:
    metadata:
      labels:
        app: springjwtdocker1
    spec:
      containers:
        - name: myspringjwtdocker1
          image: jacksondaf/springjwtdocker1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springjwtdocker1-svc
spec:
  selector:
    app: springjwtdocker1
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
